Fix alignment of chevron button

--- a/packages/edit-site/src/components/header/document-actions/style.scss
+++ b/packages/edit-site/src/components/header/document-actions/style.scss
@@ -7,6 +7,9 @@
 	position: relative;
 
 	.edit-site-document-actions__title {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		font-weight: bold;
 		transition: transform 0.2s;
 		@include reduce-motion(transition);
